parser.output
Grammar

    0 $accept: root "end of file"

    1 root: program

    2 program: vars classes entry
    3        | classes entry
    4        | vars entry
    5        | entry

    6 class: CLASS ID CLB optnewline vars methods CRB
    7      | CLASS ID CLB optnewline vars CRB
    8      | CLASS ID CLB optnewline methods CRB
    9      | CLASS ID CLB optnewline CRB

   10 classes: class stmtEnd
   11        | classes class stmtEnd

   12 vars: var stmtEnd
   13     | vars var stmtEnd

   14 method: ID LP params RP COLON type stmtBl
   15       | ID LP RP COLON type stmtBl
   16       | ID LP error RP COLON type stmtBl

   17 methods: method optnewline
   18        | methods method optnewline

   19 params: ID COLON type
   20       | params COMMA ID COLON type

   21 var: VOLATILE ID COLON type ASSIGNOP expression
   22    | VOLATILE ID COLON type
   23    | ID COLON type ASSIGNOP expression
   24    | ID COLON type

   25 type: baseType LB RB
   26     | baseType
   27     | ID
   28     | VOID

   29 baseType: INT_EXPR
   30         | FLOAT_EXPR
   31         | BOOL_EXPR

   32 expression: expression PLUSOP expression
   33           | expression MINUSOP expression
   34           | expression MULTOP expression
   35           | expression DIVOP expression
   36           | expression POWEROP expression
   37           | expression AND expression
   38           | expression OR expression
   39           | expression LESSOP expression
   40           | expression MOREOP expression
   41           | expression LESSEQOP expression
   42           | expression MOREEQOP expression
   43           | expression COMPOP expression
   44           | expression NOTEQOP expression
   45           | expression LB expression RB
   46           | expression DOT LENGTH
   47           | expression DOT ID LP RP
   48           | expression DOT ID LP funcopt1 RP
   49           | baseType LB expression RB
   50           | baseType LB expression listopt1 RB
   51           | factor

   52 listopt1: COMMA expression
   53         | listopt1 COMMA expression

   54 funcopt1: expression
   55         | funcopt1 COMMA expression

   56 factor: INT
   57       | FLOAT
   58       | STRING
   59       | ID LP RP
   60       | ID LP funcopt1 RP
   61       | TRUE
   62       | FALSE
   63       | ID
   64       | NOT expression
   65       | LP expression RP

   66 stmt: PRINT LP expression RP
   67     | RETURN expression
   68     | BREAK
   69     | CONTINUE
   70     | IF LP expression RP stmtBl
   71     | IF LP expression RP stmt
   72     | IF LP expression RP stmtBl ELSE stmtBl
   73     | expression
   74     | var
   75     | READ LP expression RP
   76     | expression ASSIGNOP expression
   77     | FOR LP foropt1 COMMA foropt2 COMMA expression ASSIGNOP expression RP stmtBl

   78 foropt1: var
   79        | expression ASSIGNOP expression
   80        | ε

   81 foropt2: expression
   82        | ε

   83 stmts: stmt stmtEnd
   84      | stmts stmt stmtEnd
   85      | stmts error stmtEnd
   86      | error stmtEnd

   87 stmtEnd: NEWLINE
   88        | stmtEnd NEWLINE

   89 optnewline: ε
   90           | optnewline NEWLINE

   91 stmtBl: CLB stmtEnd stmts CRB
   92       | CLB stmts CRB
   93       | CLB error CRB
   94       | CLB CRB

   95 entry: MAIN LP RP COLON INT_EXPR stmtBl


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256) 16 85 86 93
    PLUSOP <std::string> (258) 32
    MINUSOP <std::string> (259) 33
    MULTOP <std::string> (260) 34
    INT <std::string> (261) 56
    FLOAT <std::string> (262) 57
    STRING <std::string> (263) 58
    LP <std::string> (264) 14 15 16 47 48 59 60 65 66 70 71 72 75 77 95
    RP <std::string> (265) 14 15 16 47 48 59 60 65 66 70 71 72 75 77 95
    ID <std::string> (266) 6 7 8 9 14 15 16 19 20 21 22 23 24 27 47 48 59 60 63
    FOR <std::string> (267) 77
    INT_EXPR <std::string> (268) 29 95
    FLOAT_EXPR <std::string> (269) 30
    VOID <std::string> (270) 28
    BOOL_EXPR <std::string> (271) 31
    LB <std::string> (272) 25 45 49 50
    RB <std::string> (273) 25 45 49 50
    CLB <std::string> (274) 6 7 8 9 91 92 93 94
    CRB <std::string> (275) 6 7 8 9 91 92 93 94
    DOT <std::string> (276) 46 47 48
    COMMA <std::string> (277) 20 52 53 55 77
    COLON <std::string> (278) 14 15 16 19 20 21 22 23 24 95
    IF <std::string> (279) 70 71 72
    ELSE <std::string> (280) 72
    PRINT <std::string> (281) 66
    READ <std::string> (282) 75
    RETURN <std::string> (283) 67
    BREAK <std::string> (284) 68
    CONTINUE <std::string> (285) 69
    AND <std::string> (286) 37
    OR <std::string> (287) 38
    LESSOP <std::string> (288) 39
    MOREOP <std::string> (289) 40
    LESSEQOP <std::string> (290) 41
    MOREEQOP <std::string> (291) 42
    COMPOP <std::string> (292) 43
    NOTEQOP <std::string> (293) 44
    DIVOP <std::string> (294) 35
    POWEROP <std::string> (295) 36
    ASSIGNOP <std::string> (296) 21 23 76 77 79
    NOT <std::string> (297) 64
    TRUE <std::string> (298) 61
    FALSE <std::string> (299) 62
    NEWLINE <std::string> (300) 87 88 90
    CLASS <std::string> (301) 6 7 8 9
    MAIN <std::string> (302) 95
    VOLATILE <std::string> (303) 21 22
    LENGTH <std::string> (304) 46
    LOWER_THAN_ELSE (305)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    root <Node *> (52)
        on left: 1
        on right: 0
    program <Node *> (53)
        on left: 2 3 4 5
        on right: 1
    class <Node *> (54)
        on left: 6 7 8 9
        on right: 10 11
    classes <Node *> (55)
        on left: 10 11
        on right: 2 3 11
    vars <Node *> (56)
        on left: 12 13
        on right: 2 4 6 7 13
    method <Node *> (57)
        on left: 14 15 16
        on right: 17 18
    methods <Node *> (58)
        on left: 17 18
        on right: 6 8 18
    params <Node *> (59)
        on left: 19 20
        on right: 14 20
    var <Node *> (60)
        on left: 21 22 23 24
        on right: 12 13 74 78
    type <Node *> (61)
        on left: 25 26 27 28
        on right: 14 15 16 19 20 21 22 23 24
    baseType <Node *> (62)
        on left: 29 30 31
        on right: 25 26 49 50
    expression <Node *> (63)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 21 23 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 52 53 54 55 64 65 66 67 70 71 72 73 75 76 77 79 81
    listopt1 <Node *> (64)
        on left: 52 53
        on right: 50 53
    funcopt1 <Node *> (65)
        on left: 54 55
        on right: 48 55 60
    factor <Node *> (66)
        on left: 56 57 58 59 60 61 62 63 64 65
        on right: 51
    stmt <Node *> (67)
        on left: 66 67 68 69 70 71 72 73 74 75 76 77
        on right: 71 83 84
    foropt1 <Node *> (68)
        on left: 78 79 80
        on right: 77
    foropt2 <Node *> (69)
        on left: 81 82
        on right: 77
    stmts <Node *> (70)
        on left: 83 84 85 86
        on right: 84 85 91 92
    stmtEnd <Node *> (71)
        on left: 87 88
        on right: 10 11 12 13 83 84 85 86 88 91
    optnewline <Node *> (72)
        on left: 89 90
        on right: 6 7 8 9 17 18 90
    stmtBl <Node *> (73)
        on left: 91 92 93 94
        on right: 14 15 16 70 72 77 95
    entry <Node *> (74)
        on left: 95
        on right: 2 3 4 5


State 0

    0 $accept: • root "end of file"

    ID        shift, and go to state 1
    CLASS     shift, and go to state 2
    MAIN      shift, and go to state 3
    VOLATILE  shift, and go to state 4

    root     go to state 5
    program  go to state 6
    class    go to state 7
    classes  go to state 8
    vars     go to state 9
    var      go to state 10
    entry    go to state 11


State 1

   23 var: ID • COLON type ASSIGNOP expression
   24    | ID • COLON type

    COLON  shift, and go to state 12


State 2

    6 class: CLASS • ID CLB optnewline vars methods CRB
    7      | CLASS • ID CLB optnewline vars CRB
    8      | CLASS • ID CLB optnewline methods CRB
    9      | CLASS • ID CLB optnewline CRB

    ID  shift, and go to state 13


State 3

   95 entry: MAIN • LP RP COLON INT_EXPR stmtBl

    LP  shift, and go to state 14


State 4

   21 var: VOLATILE • ID COLON type ASSIGNOP expression
   22    | VOLATILE • ID COLON type

    ID  shift, and go to state 15


State 5

    0 $accept: root • "end of file"

    "end of file"  shift, and go to state 16


State 6

    1 root: program •

    $default  reduce using rule 1 (root)


State 7

   10 classes: class • stmtEnd

    NEWLINE  shift, and go to state 17

    stmtEnd  go to state 18


State 8

    3 program: classes • entry
   11 classes: classes • class stmtEnd

    CLASS  shift, and go to state 2
    MAIN   shift, and go to state 3

    class  go to state 19
    entry  go to state 20


State 9

    2 program: vars • classes entry
    4        | vars • entry
   13 vars: vars • var stmtEnd

    ID        shift, and go to state 1
    CLASS     shift, and go to state 2
    MAIN      shift, and go to state 3
    VOLATILE  shift, and go to state 4

    class    go to state 7
    classes  go to state 21
    var      go to state 22
    entry    go to state 23


State 10

   12 vars: var • stmtEnd

    NEWLINE  shift, and go to state 17

    stmtEnd  go to state 24


State 11

    5 program: entry •

    $default  reduce using rule 5 (program)


State 12

   23 var: ID COLON • type ASSIGNOP expression
   24    | ID COLON • type

    ID          shift, and go to state 25
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    VOID        shift, and go to state 28
    BOOL_EXPR   shift, and go to state 29

    type      go to state 30
    baseType  go to state 31


State 13

    6 class: CLASS ID • CLB optnewline vars methods CRB
    7      | CLASS ID • CLB optnewline vars CRB
    8      | CLASS ID • CLB optnewline methods CRB
    9      | CLASS ID • CLB optnewline CRB

    CLB  shift, and go to state 32


State 14

   95 entry: MAIN LP • RP COLON INT_EXPR stmtBl

    RP  shift, and go to state 33


State 15

   21 var: VOLATILE ID • COLON type ASSIGNOP expression
   22    | VOLATILE ID • COLON type

    COLON  shift, and go to state 34


State 16

    0 $accept: root "end of file" •

    $default  accept


State 17

   87 stmtEnd: NEWLINE •

    $default  reduce using rule 87 (stmtEnd)


State 18

   10 classes: class stmtEnd •
   88 stmtEnd: stmtEnd • NEWLINE

    NEWLINE  shift, and go to state 35

    $default  reduce using rule 10 (classes)


State 19

   11 classes: classes class • stmtEnd

    NEWLINE  shift, and go to state 17

    stmtEnd  go to state 36


State 20

    3 program: classes entry •

    $default  reduce using rule 3 (program)


State 21

    2 program: vars classes • entry
   11 classes: classes • class stmtEnd

    CLASS  shift, and go to state 2
    MAIN   shift, and go to state 3

    class  go to state 19
    entry  go to state 37


State 22

   13 vars: vars var • stmtEnd

    NEWLINE  shift, and go to state 17

    stmtEnd  go to state 38


State 23

    4 program: vars entry •

    $default  reduce using rule 4 (program)


State 24

   12 vars: var stmtEnd •
   88 stmtEnd: stmtEnd • NEWLINE

    NEWLINE  shift, and go to state 35

    $default  reduce using rule 12 (vars)


State 25

   27 type: ID •

    $default  reduce using rule 27 (type)


State 26

   29 baseType: INT_EXPR •

    $default  reduce using rule 29 (baseType)


State 27

   30 baseType: FLOAT_EXPR •

    $default  reduce using rule 30 (baseType)


State 28

   28 type: VOID •

    $default  reduce using rule 28 (type)


State 29

   31 baseType: BOOL_EXPR •

    $default  reduce using rule 31 (baseType)


State 30

   23 var: ID COLON type • ASSIGNOP expression
   24    | ID COLON type •

    ASSIGNOP  shift, and go to state 39

    $default  reduce using rule 24 (var)


State 31

   25 type: baseType • LB RB
   26     | baseType •

    LB  shift, and go to state 40

    $default  reduce using rule 26 (type)


State 32

    6 class: CLASS ID CLB • optnewline vars methods CRB
    7      | CLASS ID CLB • optnewline vars CRB
    8      | CLASS ID CLB • optnewline methods CRB
    9      | CLASS ID CLB • optnewline CRB

    $default  reduce using rule 89 (optnewline)

    optnewline  go to state 41


State 33

   95 entry: MAIN LP RP • COLON INT_EXPR stmtBl

    COLON  shift, and go to state 42


State 34

   21 var: VOLATILE ID COLON • type ASSIGNOP expression
   22    | VOLATILE ID COLON • type

    ID          shift, and go to state 25
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    VOID        shift, and go to state 28
    BOOL_EXPR   shift, and go to state 29

    type      go to state 43
    baseType  go to state 31


State 35

   88 stmtEnd: stmtEnd NEWLINE •

    $default  reduce using rule 88 (stmtEnd)


State 36

   11 classes: classes class stmtEnd •
   88 stmtEnd: stmtEnd • NEWLINE

    NEWLINE  shift, and go to state 35

    $default  reduce using rule 11 (classes)


State 37

    2 program: vars classes entry •

    $default  reduce using rule 2 (program)


State 38

   13 vars: vars var stmtEnd •
   88 stmtEnd: stmtEnd • NEWLINE

    NEWLINE  shift, and go to state 35

    $default  reduce using rule 13 (vars)


State 39

   23 var: ID COLON type ASSIGNOP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 53
    factor      go to state 54


State 40

   25 type: baseType LB • RB

    RB  shift, and go to state 55


State 41

    6 class: CLASS ID CLB optnewline • vars methods CRB
    7      | CLASS ID CLB optnewline • vars CRB
    8      | CLASS ID CLB optnewline • methods CRB
    9      | CLASS ID CLB optnewline • CRB
   90 optnewline: optnewline • NEWLINE

    ID        shift, and go to state 56
    CRB       shift, and go to state 57
    NEWLINE   shift, and go to state 58
    VOLATILE  shift, and go to state 4

    vars     go to state 59
    method   go to state 60
    methods  go to state 61
    var      go to state 10


State 42

   95 entry: MAIN LP RP COLON • INT_EXPR stmtBl

    INT_EXPR  shift, and go to state 62


State 43

   21 var: VOLATILE ID COLON type • ASSIGNOP expression
   22    | VOLATILE ID COLON type •

    ASSIGNOP  shift, and go to state 63

    $default  reduce using rule 22 (var)


State 44

   56 factor: INT •

    $default  reduce using rule 56 (factor)


State 45

   57 factor: FLOAT •

    $default  reduce using rule 57 (factor)


State 46

   58 factor: STRING •

    $default  reduce using rule 58 (factor)


State 47

   65 factor: LP • expression RP

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 64
    factor      go to state 54


State 48

   59 factor: ID • LP RP
   60       | ID • LP funcopt1 RP
   63       | ID •

    LP  shift, and go to state 65

    $default  reduce using rule 63 (factor)


State 49

   64 factor: NOT • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 66
    factor      go to state 54


State 50

   61 factor: TRUE •

    $default  reduce using rule 61 (factor)


State 51

   62 factor: FALSE •

    $default  reduce using rule 62 (factor)


State 52

   49 expression: baseType • LB expression RB
   50           | baseType • LB expression listopt1 RB

    LB  shift, and go to state 67


State 53

   23 var: ID COLON type ASSIGNOP expression •
   32 expression: expression • PLUSOP expression
   33           | expression • MINUSOP expression
   34           | expression • MULTOP expression
   35           | expression • DIVOP expression
   36           | expression • POWEROP expression
   37           | expression • AND expression
   38           | expression • OR expression
   39           | expression • LESSOP expression
   40           | expression • MOREOP expression
   41           | expression • LESSEQOP expression
   42           | expression • MOREEQOP expression
   43           | expression • COMPOP expression
   44           | expression • NOTEQOP expression
   45           | expression • LB expression RB
   46           | expression • DOT LENGTH
   47           | expression • DOT ID LP RP
   48           | expression • DOT ID LP funcopt1 RP

    PLUSOP    shift, and go to state 68
    MINUSOP   shift, and go to state 69
    MULTOP    shift, and go to state 70
    LB        shift, and go to state 71
    DOT       shift, and go to state 72
    AND       shift, and go to state 73
    OR        shift, and go to state 74
    LESSOP    shift, and go to state 75
    MOREOP    shift, and go to state 76
    LESSEQOP  shift, and go to state 77
    MOREEQOP  shift, and go to state 78
    COMPOP    shift, and go to state 79
    NOTEQOP   shift, and go to state 80
    DIVOP     shift, and go to state 81
    POWEROP   shift, and go to state 82

    $default  reduce using rule 23 (var)


State 54

   51 expression: factor •

    $default  reduce using rule 51 (expression)


State 55

   25 type: baseType LB RB •

    $default  reduce using rule 25 (type)


State 56

   14 method: ID • LP params RP COLON type stmtBl
   15       | ID • LP RP COLON type stmtBl
   16       | ID • LP error RP COLON type stmtBl
   23 var: ID • COLON type ASSIGNOP expression
   24    | ID • COLON type

    LP     shift, and go to state 83
    COLON  shift, and go to state 12


State 57

    9 class: CLASS ID CLB optnewline CRB •

    $default  reduce using rule 9 (class)


State 58

   90 optnewline: optnewline NEWLINE •

    $default  reduce using rule 90 (optnewline)


State 59

    6 class: CLASS ID CLB optnewline vars • methods CRB
    7      | CLASS ID CLB optnewline vars • CRB
   13 vars: vars • var stmtEnd

    ID        shift, and go to state 56
    CRB       shift, and go to state 84
    VOLATILE  shift, and go to state 4

    method   go to state 60
    methods  go to state 85
    var      go to state 22


State 60

   17 methods: method • optnewline

    $default  reduce using rule 89 (optnewline)

    optnewline  go to state 86


State 61

    8 class: CLASS ID CLB optnewline methods • CRB
   18 methods: methods • method optnewline

    ID   shift, and go to state 87
    CRB  shift, and go to state 88

    method  go to state 89


State 62

   95 entry: MAIN LP RP COLON INT_EXPR • stmtBl

    CLB  shift, and go to state 90

    stmtBl  go to state 91


State 63

   21 var: VOLATILE ID COLON type ASSIGNOP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 92
    factor      go to state 54


State 64

   32 expression: expression • PLUSOP expression
   33           | expression • MINUSOP expression
   34           | expression • MULTOP expression
   35           | expression • DIVOP expression
   36           | expression • POWEROP expression
   37           | expression • AND expression
   38           | expression • OR expression
   39           | expression • LESSOP expression
   40           | expression • MOREOP expression
   41           | expression • LESSEQOP expression
   42           | expression • MOREEQOP expression
   43           | expression • COMPOP expression
   44           | expression • NOTEQOP expression
   45           | expression • LB expression RB
   46           | expression • DOT LENGTH
   47           | expression • DOT ID LP RP
   48           | expression • DOT ID LP funcopt1 RP
   65 factor: LP expression • RP

    PLUSOP    shift, and go to state 68
    MINUSOP   shift, and go to state 69
    MULTOP    shift, and go to state 70
    RP        shift, and go to state 93
    LB        shift, and go to state 71
    DOT       shift, and go to state 72
    AND       shift, and go to state 73
    OR        shift, and go to state 74
    LESSOP    shift, and go to state 75
    MOREOP    shift, and go to state 76
    LESSEQOP  shift, and go to state 77
    MOREEQOP  shift, and go to state 78
    COMPOP    shift, and go to state 79
    NOTEQOP   shift, and go to state 80
    DIVOP     shift, and go to state 81
    POWEROP   shift, and go to state 82


State 65

   59 factor: ID LP • RP
   60       | ID LP • funcopt1 RP

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    RP          shift, and go to state 94
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 95
    funcopt1    go to state 96
    factor      go to state 54


State 66

   32 expression: expression • PLUSOP expression
   33           | expression • MINUSOP expression
   34           | expression • MULTOP expression
   35           | expression • DIVOP expression
   36           | expression • POWEROP expression
   37           | expression • AND expression
   38           | expression • OR expression
   39           | expression • LESSOP expression
   40           | expression • MOREOP expression
   41           | expression • LESSEQOP expression
   42           | expression • MOREEQOP expression
   43           | expression • COMPOP expression
   44           | expression • NOTEQOP expression
   45           | expression • LB expression RB
   46           | expression • DOT LENGTH
   47           | expression • DOT ID LP RP
   48           | expression • DOT ID LP funcopt1 RP
   64 factor: NOT expression •

    LB   shift, and go to state 71
    DOT  shift, and go to state 72

    $default  reduce using rule 64 (factor)


State 67

   49 expression: baseType LB • expression RB
   50           | baseType LB • expression listopt1 RB

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 97
    factor      go to state 54


State 68

   32 expression: expression PLUSOP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 98
    factor      go to state 54


State 69

   33 expression: expression MINUSOP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 99
    factor      go to state 54


State 70

   34 expression: expression MULTOP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 100
    factor      go to state 54


State 71

   45 expression: expression LB • expression RB

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 101
    factor      go to state 54


State 72

   46 expression: expression DOT • LENGTH
   47           | expression DOT • ID LP RP
   48           | expression DOT • ID LP funcopt1 RP

    ID      shift, and go to state 102
    LENGTH  shift, and go to state 103


State 73

   37 expression: expression AND • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 104
    factor      go to state 54


State 74

   38 expression: expression OR • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 105
    factor      go to state 54


State 75

   39 expression: expression LESSOP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 106
    factor      go to state 54


State 76

   40 expression: expression MOREOP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 107
    factor      go to state 54


State 77

   41 expression: expression LESSEQOP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 108
    factor      go to state 54


State 78

   42 expression: expression MOREEQOP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 109
    factor      go to state 54


State 79

   43 expression: expression COMPOP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 110
    factor      go to state 54


State 80

   44 expression: expression NOTEQOP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 111
    factor      go to state 54


State 81

   35 expression: expression DIVOP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 112
    factor      go to state 54


State 82

   36 expression: expression POWEROP • expression

    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 48
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51

    baseType    go to state 52
    expression  go to state 113
    factor      go to state 54


State 83

   14 method: ID LP • params RP COLON type stmtBl
   15       | ID LP • RP COLON type stmtBl
   16       | ID LP • error RP COLON type stmtBl

    error  shift, and go to state 114
    RP     shift, and go to state 115
    ID     shift, and go to state 116

    params  go to state 117


State 84

    7 class: CLASS ID CLB optnewline vars CRB •

    $default  reduce using rule 7 (class)


State 85

    6 class: CLASS ID CLB optnewline vars methods • CRB
   18 methods: methods • method optnewline

    ID   shift, and go to state 87
    CRB  shift, and go to state 118

    method  go to state 89


State 86

   17 methods: method optnewline •
   90 optnewline: optnewline • NEWLINE

    NEWLINE  shift, and go to state 58

    $default  reduce using rule 17 (methods)


State 87

   14 method: ID • LP params RP COLON type stmtBl
   15       | ID • LP RP COLON type stmtBl
   16       | ID • LP error RP COLON type stmtBl

    LP  shift, and go to state 83


State 88

    8 class: CLASS ID CLB optnewline methods CRB •

    $default  reduce using rule 8 (class)


State 89

   18 methods: methods method • optnewline

    $default  reduce using rule 89 (optnewline)

    optnewline  go to state 119


State 90

   91 stmtBl: CLB • stmtEnd stmts CRB
   92       | CLB • stmts CRB
   93       | CLB • error CRB
   94       | CLB • CRB

    error       shift, and go to state 120
    INT         shift, and go to state 44
    FLOAT       shift, and go to state 45
    STRING      shift, and go to state 46
    LP          shift, and go to state 47
    ID          shift, and go to state 121
    FOR         shift, and go to state 122
    INT_EXPR    shift, and go to state 26
    FLOAT_EXPR  shift, and go to state 27
    BOOL_EXPR   shift, and go to state 29
    CRB         shift, and go to state 123
    IF          shift, and go to state 124
    PRINT       shift, and go to state 125
    READ        shift, and go to state 126
    RETURN      shift, and go to state 127
    BREAK       shift, and go to state 128
    CONTINUE    shift, and go to state 129
    NOT         shift, and go to state 49
    TRUE        shift, and go to state 50
    FALSE       shift, and go to state 51
    NEWLINE     shift, and go to state 17
    VOLATILE    shift, and go to state 4

    var         go to state 130
    baseType    go to state 52
    expression  go to state 131
    factor      go to state 54
    stmt        go to state 132
    stmts       go to state 133
    stmtEnd     go to state 134


State 91

   95 entry: MAIN LP RP COLON INT_EXPR stmtBl •

    $default  reduce using rule 95 (entry)


State 92
